--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@rollup/rollup-darwin-x64": "^4.9.6",
+    "@rollup/wasm-node": "^4.9.6",
     "@testing-library/jest-dom": "^6.4.1",
     "@testing-library/react": "^14.2.1",
     "@testing-library/user-event": "^14.5.2",
